<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.developer.rdguzman.agendatelefonica.AgregarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/usuario_add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblNombre"
                android:layout_weight="4"/>
            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtNombre"
                android:inputType="text"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblApellidoP"
                android:layout_weight="1.9"/>
            <EditText
                android:id="@+id/txtApellidoP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtApellido"
                android:inputType="text"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblApellidoM"
                android:layout_weight="1.9"/>
            <EditText
                android:id="@+id/txtApellidoM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtApellido"
                android:inputType="text"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <Spinner
                android:id="@+id/spinTel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/spinTelefono"
                android:gravity="left"
                android:layout_weight="1.9"/>
            <EditText
                android:id="@+id/txtNumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtTelefono"
                android:inputType="number"
                android:layout_weight="1"
                android:maxLength="10"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblCorreo"
                android:layout_weight="4"/>
            <EditText
                android:id="@+id/txtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtCorreo"
                android:inputType="textEmailAddress"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblDireccion"
                android:layout_weight="4"/>
            <EditText
                android:id="@+id/txtDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtDireccion"
                android:inputType="text"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/ic_menu_save" />
    </LinearLayout>
</LinearLayout>
